--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: actuarialmetrics
-Title: What the Package Does (One Line, Title Case)
+Title: Actuarial science tools for R
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Olivier", "Côté", , "olivier.cote.12@ulaval.ca", role = c("aut"))
+Description: Package that builds actuarial science tools with R. The pacakge offer simple visualisation for classic model evaluation tools such as double lift charts, loss ratios lift charts or gini index curves. 
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
-Imports:  
+Imports: 
         dplyr,
         ggplot2,
+        RcolorBrewer,
+Depends: 
+    R (>= 2.10)
