--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,6 @@ RoxygenNote: 7.2.2
 Imports: 
         dplyr,
         ggplot2,
-        RcolorBrewer,
+        RColorBrewer,
 Depends: 
     R (>= 2.10)
