--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Authors@R:
 Description: Package that builds actuarial science tools with R. The pacakge offer simple visualisation for classic model evaluation tools such as double lift charts, loss ratios lift charts or gini index curves. 
 License: MIT + file LICENSE
 Encoding: UTF-8
+LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.2
 Imports: 
