--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,10 @@ export(ipak)
 export(lrlift_graph)
 export(make_onehot_dfs)
 export(put_labels)
+import(RColorBrewer)
+import(geneplotter)
+import(ggplot2)
+import(gplots)
+import(pheatmap)
+import(reshape2)
+import(survcomp)
